[package]
name = "bench"
version = "0.1.0"
authors = ["Henk van der Laan <opensource@henkvdlaan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7"
aoc-henk = { path = "../henk" }
aoc-stefan = { path = "../stefan" }
aoc-michiel = { path = "../michiel" }
